$Id: ChangeLog,v 1.86 2004/07/19 16:24:24 freckle Exp $

2004-07-19  Matthias Ringwald <mringwal@inf.ethz.ch>

    * os/mutex.c: code contained same bug as os/semaphore.c.
    Unfortunately I didn't understand the other fix, but 
    anyway made NutMutexLock more robust.
    Fixed wrong indention of all functions

2004-07-14  Matthias Ringwald <mringwal@inf.ethz.ch>

    * dev/unix_devs.c: read operation is now woken by
    a 'IRQ'-handler to avoid race-conditions
    Provide placebo implementations for
    UART_[SET/GET][TX|RX]BUF[SIZ|HWMARK|LWMARK],
    UART_[GET|SET]STATUS and UART_SETCOOKEDMODE ioctl.

    * os/arch/unix-nutinit.c, unix_timer.c, unix.h:
    Provide enumeration for IRQs used so far,
    IRQ dispatcher uses broadcast now,
    added handler for CTRL-C 

2004-07-09  Matthias Ringwald <mringwal@inf.ethz.ch>

    * os/arch/avr-nutinit.c: Allow setting of NUTRAMEND
    by giving it as a compiler flag and moved
    ((volatile u_char *) NUTRAMEND) cast into NUTRAMENDPTR

    * os/arch/avr-nutinit.c: New function 
    NutThreadSetSleepMode to tell nut/os to set the
    MCU to sleep when in idle (avr-gcc && avr128 only)
      
2004-06-25  Matthias Ringwald <mringwal@inf.ethz.ch>

    * crt/write.c, crt/write_P.c: Added note that write
    calls are not thread-safe, i.e, two writes might
    come out intermixed

2004-06-24  Matthias Ringwald <mringwal@inf.ethz.ch>

    * dev/unix_devs.c: if using STDIO, better read from
    STDIN instead of STDOUT => unix piping works
    
2004-06-23  Ole Reinhardt <ole.reinhardt@kernelconcept.de>
    * dev/can_dev.c, include/dev/can_dev.h:
    Added functions for buffer monitoring (avail / free)

2004-06-21  Matthias Ringwald <mringwal@inf.ethz.ch>

    * dev/unix_devs.c: multiple parallel reads now work.
    But still dead-locks possible.
    Non-blocking stdio.

2004-06-21  Matthias Ringwald <mringwal@inf.ethz.ch>

   * os/arch/unix_nutinit.c: idle thread now sleeps until
    the next (virtual) IRQ occures
